fixing resource alignment

--- a/src/components/Resource/Resource.scss
+++ b/src/components/Resource/Resource.scss
@@ -2,6 +2,8 @@
 
 .resource {
   display: flex;
+  align-items: center;
+  justify-content: center;
   &.cost > span {
     font-size: 1.2em;
     font-weight: 600;
